# zfs-tree

./: .gitignore  AUTHOR.gpg.fingerprint  LICENSE  README.md  mud_tree_python.py  noxfile.py  pyproject.toml  zfs_tree.py
src/: zfs_tree.py
src/zfs_tree/: __init__.py  dataset.py  hierarchy.py  shell.py
