[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mud_tree_python"
version = "2023.0.0"
description = "Toying around with drawing trees of zfs child datasets"
authors = [{name = "Guillaume Yziquel", email = "guillaume@vizyon.ai"}]
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = [
  "rich >=13.5,<14",
  "pyrsistent ~=0.19.3"
]

[project.scripts]
mud-tree-python = "mud_tree_python:main"

[tool.flit.sdist]
exclude = [".gitignore"]
