[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zfs_tree"
version = "0.1"
description = "Listing ZFS datasets as a tree"
authors = [{name = "Guillaume Yziquel", email = "guillaume@vizyon.ai"}]
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = [
  "rich >=13.5,<14",
  "pyrsistent ~=0.19.3"
]

[project.scripts]
zfs-tree = "zfs_tree:main"

[tool.flit.sdist]
exclude = [".gitignore"]
